--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "employee_database" "\0"
+            VALUE "FileDescription", "notebook" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "employee_database" "\0"
+            VALUE "InternalName", "notebook" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "employee_database.exe" "\0"
-            VALUE "ProductName", "employee_database" "\0"
+            VALUE "OriginalFilename", "notebook.exe" "\0"
+            VALUE "ProductName", "notebook" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
